# agent_tps_simulator

./: .gitignore  API.md  DESIGN.md  IMPLEMENTATION_ANALYSIS.md  INSTALL.md  QUICK_START.md  README.md  RUN_SERVER.md  TESTING.md  USAGE.md  USER_MANUAL.md  anaylze_architecture.md  history.md  progress.md  pyproject.toml  start.bat  start.sh
backend/: main.py
backend/api/: flow.py  llm_hub.py  simulation.py
backend/data/: gpu_reference.json
backend/data/flows/: 2632b5b1-a573-464a-a5f1-68e5e1a205a4.json  9c0db5c6-bc66-4928-935c-3b6f6a0950d0.json
backend/data/llm_servers/: 178c7fb3-df15-45cf-8024-487a5ec71a77.json  75958215-a3bd-4038-8630-05beb9083d71.json  e5d89ca2-d9df-4ae0-897c-5770e7b8495a.json
backend/data/simulation_results/: 0423d018-1b0f-40d9-9c73-5a3eb6912b07.json  17123be8-b8b1-46dc-87e2-27645fdf1eec.json  5c76721d-df63-4adf-a3be-18d1d04ca546.json  67d3bbc0-85b7-4b5c-8945-29a2f788f2f1.json  90f84c3c-c3a0-4eb4-af21-cb7ed84ba28d.json  a1a36c7c-ab4f-44fb-9abf-fb4114c4db46.json  d5495ab4-6c59-4bbc-8475-f9cf2d90fa13.json  d70bd6c1-5f39-4be5-a7ed-11315ce6ac81.json  ee3ea443-4a89-47e6-a82b-f48824ae601c.json  fe1b259d-3d7e-406e-8d6f-2e596e766568.json
backend/engine/: arrival.py  metrics.py  node.py  simulator.py
backend/models/: flow.py  llm_server.py  simulation.py
designs/: README.md
designs/components/: FlowEditor.md  NodeMonitor.md  SimPanel.md
designs/systems/: data-flow.md  metrics-system.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: api.test.ts  store.test.ts
(+16 files in other folders)
